--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
-AuthUserFile /path/to/.htpasswd
+AuthUserFile /home/forge/default/current/.htpasswd
 AuthType Basic
 AuthName "Samba Website Entry"
 Require valid-user
