--- a/.env
+++ b/.env
@@ -2,17 +2,17 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:Nm+f02jPA2Ux8c+hUWkXSb7G1CSYFnWuLKovFvYNZ6E=
 APP_DEBUG=true
-APP_URL
+APP_URL=sunderlandsamba.com
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
-lDB_CONNECTION=mysql
+DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=3307
+DB_PORT=3306
 DB_DATABASE=forge
-DB_USERNAME=cms_www
-DB_PASSWORD=kZGAaYZjbxAF4SaP
+DB_USERNAME=root
+DB_PASSWORD=puQQ68HDMP
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
